--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="/styles/Index.css" />
-    <link rel="stylesheet" href="/styles/Universal.css" />
+    <link rel="stylesheet" href="Index.css" />
+    <link rel="stylesheet" href="Universal.css" />
     <title>MyProfile</title>
   </head>
   <body>
@@ -12,10 +12,10 @@
     <nav>
       <div class="nav">
         <a href="Index.html">About</a>
-        <a href="/pages/Skills.html"> Skills</a>
-        <a href="/pages/Education.html">Education</a>
-        <a href="/pages/Experience.html">Experience</a>
-        <a href="/pages/Interests.html">Interests</a>
+        <a href="Skills.html"> Skills</a>
+        <a href="Education.html">Education</a>
+        <a href="Experience.html">Experience</a>
+        <a href="Interests.html">Interests</a>
     </div>
   </nav>
   <div id="container">
