--- a/Index.html
+++ b/Index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="Index.css" />
-    <link rel="stylesheet" href="Universal.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="universal.css" />
     <title>MyProfile</title>
   </head>
   <body>
     <header></header>
     <nav>
       <div class="nav">
-        <a href="Index.html">About</a>
-        <a href="Skills.html"> Skills</a>
-        <a href="Education.html">Education</a>
-        <a href="Experience.html">Experience</a>
-        <a href="Interests.html">Interests</a>
+        <a href="index.html">About</a>
+        <a href="skills.html"> Skills</a>
+        <a href="education.html">Education</a>
+        <a href="experience.html">Experience</a>
+        <a href="interests.html">Interests</a>
     </div>
   </nav>
   <div id="container">
